--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/kvaden19/pandemic#readme",
   "dependencies": {
-    "jest": "^26.6.3"
+    "dotenv": "^9.0.2",
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.2"
   }
 }
